force-app/main/default/objects/Service_Status_Update__c/Service_Status_Update__c.object-meta.xml
<CustomObject>
    <description>Object that handles records for Service Status Updates, these are displayed in the community either as a banner or on the service status page</description>
    <label>Service Status Update</label>
    <nameField>
        <displayFormat>ISU-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Status Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>