force-app/main/default/objects/Service_Status_Update__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Main Information Area</description>
    <label>Body</label>
    <type>TextArea</type>
</CustomField>