force-app/main/default/objects/Service_Status_Update__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detail of the issue</description>
    <inlineHelpText>Detail of the issue being experienced</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>