force-app/main/default/objects/Service_Status_Update__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>Date the issue was reported</description>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>