force-app/main/default/objects/Service_Status_Update__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The issue being experianced</description>
    <inlineHelpText>What is the issue</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>