force-app/main/default/objects/Service_Status_Update__c/recordTypes/Product_Notification.recordType-meta.xml
<RecordType>
    <fullName>Product_Notification</fullName>
    <active>true</active>
    <description>Product level notification (none service related) that shows in the Customer Success Portal.</description>
    <label>Product Notification</label>
</RecordType>