force-app/main/default/objects/Service_Status_Update__c/recordTypes/Service_Status_Banner.recordType-meta.xml
<RecordType>
    <fullName>Service_Status_Banner</fullName>
    <active>true</active>
    <description>Product level service notification that shows in the Customer Success Portal.</description>
    <label>Service Notification</label>
</RecordType>