force-app/main/default/objects/Service_Status_Update__c/recordTypes/Service_Status_Page.recordType-meta.xml
<RecordType>
    <fullName>Service_Status_Page</fullName>
    <active>true</active>
    <description>Service Status displayed on the Service Status Page on the community</description>
    <label>Service Status Page</label>
</RecordType>