force-app/main/default/objects/Service_Status_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Visible__c</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Related_Product_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>