force-app/main/default/objects/Service_Status_Update__c/listViews/All_Visible_Status_Messages.listView-meta.xml
<ListView>
    <fullName>All_Visible_Status_Messages</fullName>
    <columns>NAME</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Visible Status Messages</label>
</ListView>