force-app/main/default/objects/Service_Status_Update__c/listViews/My_Previous_Status_Messages.listView-meta.xml
<ListView>
    <fullName>My_Previous_Status_Messages</fullName>
    <columns>NAME</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Visible__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Previous Status Messages</label>
</ListView>